@@ -26,14 +26,21 @@ __hg_url__       = "https://mythbox.googlecode.com/hg/"
 __credits__      = "bunch of ppl"
 __version__      = "RC2"
 
+
 if __name__ == '__main__':
     print '%s %s' % (__scriptname__, __version__)
     
     # WinPDB debugger
     #import rpdb2 
     #rpdb2.start_embedded_debugger('xxx')
-    
+
     import os, sys
     sys.path.append(os.path.join(os.getcwd(), 'resources', 'src'))
+
+    import xbmcgui
+    import xbmc
+    splash = xbmcgui.WindowXML('mythbox_splash.xml', os.getcwd())
+    splash.show()
+    
     from mythbox.bootstrapper import BootStrapper
-    BootStrapper().run()
+    BootStrapper(splash).run()
